// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag [common] example testing should match snapshot(s) for 01.default 1`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      I'm a tag!
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 01.default 2`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      I have an X!
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 1`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 2`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 3`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 4`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 5`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 6`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 7`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 8`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 9`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 10`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 11`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 12`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 13`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 14`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 15`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 16`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 17`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 18`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 19`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 20`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 21`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 22`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 23`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 24`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 25`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 26`] = `
<div
  className="lucid-Tag"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Grouped items
    </span>
    <Tag
      key=".1:$0"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$1"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$2"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$3"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$4"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$5"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$6"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$7"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$8"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$9"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$10"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$11"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$12"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$13"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$14"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$15"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$16"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$17"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$18"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$19"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$20"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$21"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$22"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$23"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$24"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 27`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 28`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 29`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 30`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 31`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 32`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 33`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 34`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 35`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 36`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 37`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 38`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 39`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 40`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 41`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 42`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 43`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 44`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 45`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 46`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 47`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 48`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 49`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 50`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 51`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 52`] = `
<div
  className="lucid-Tag"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Grouped items
    </span>
    <Tag
      key=".1:$0"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$1"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$2"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$3"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$4"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$5"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$6"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$7"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$8"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$9"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$10"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$11"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$12"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$13"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$14"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$15"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$16"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$17"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$18"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$19"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
    <Tag
      key=".1:$20"
      onRemove={[Function]}
    >
      Fashion
    </Tag>
    <Tag
      key=".1:$21"
      onRemove={[Function]}
    >
      The
    </Tag>
    <Tag
      key=".1:$22"
      onRemove={[Function]}
    >
      Vexillologist
    </Tag>
    <Tag
      key=".1:$23"
      onRemove={[Function]}
    >
      Cold Brew
    </Tag>
    <Tag
      key=".1:$24"
      onRemove={[Function]}
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </Tag>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 53`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 54`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 55`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 56`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 57`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 58`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 59`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 60`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 61`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 62`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 63`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 64`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 65`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 66`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 67`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 68`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 69`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 70`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 71`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 72`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 73`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Fashion
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 74`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      The
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 75`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Vexillologist
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 76`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cold Brew
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 02.nested 77`] = `
<div
  className="lucid-Tag lucid-Tag-leaf"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      This is a longer sentence that should be handled okay but what if it is even longer than you could ever think imaginable
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 1`] = `
<div
  className="lucid-Tag lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Last Man on Earth
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
    <Tag
      callbackId="0.0"
      isRemovable={true}
      key=".1:$0.0"
      onRemove={[Function]}
    >
      Phil
    </Tag>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 2`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Phil
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 3`] = `
<div
  className="lucid-Tag lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Last Woman on Earth
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
    <Tag
      callbackId="1.0"
      isRemovable={true}
      key=".1:$1.0"
      onRemove={[Function]}
    >
      Carol
    </Tag>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 4`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Carol
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 5`] = `
<div
  className="lucid-Tag lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Star Wars
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
    <Tag
      callbackId="2.0"
      isRemovable={true}
      key=".1:$2.0"
      onRemove={[Function]}
    >
      Ask Aak
    </Tag>
    <Tag
      callbackId="2.1"
      isRemovable={true}
      key=".1:$2.1"
      onRemove={[Function]}
    >
      Admiral Gial Ackbar
    </Tag>
    <Tag
      callbackId="2.2"
      isRemovable={true}
      key=".1:$2.2"
      onRemove={[Function]}
    >
      Acros-Krik
    </Tag>
    <Tag
      callbackId="2.3"
      isRemovable={true}
      key=".1:$2.3"
      onRemove={[Function]}
    >
      Ak-Rev
    </Tag>
    <Tag
      callbackId="2.4"
      isRemovable={true}
      key=".1:$2.4"
      onRemove={[Function]}
    >
      Stass Allie
    </Tag>
    <Tag
      callbackId="2.5"
      isRemovable={true}
      key=".1:$2.5"
      onRemove={[Function]}
    >
      Almec
    </Tag>
    <Tag
      callbackId="2.6"
      isRemovable={true}
      key=".1:$2.6"
      onRemove={[Function]}
    >
      Mas Amedda
    </Tag>
    <Tag
      callbackId="2.7"
      isRemovable={true}
      key=".1:$2.7"
      onRemove={[Function]}
    >
      Amee
    </Tag>
    <Tag
      callbackId="2.8"
      isRemovable={true}
      key=".1:$2.8"
      onRemove={[Function]}
    >
      Padmé Amidala
    </Tag>
    <Tag
      callbackId="2.9"
      isRemovable={true}
      key=".1:$2.9"
      onRemove={[Function]}
    >
      Cassian Andor
    </Tag>
    <Tag
      callbackId="2.10"
      isRemovable={true}
      key=".1:$2.10"
      onRemove={[Function]}
    >
      Bail Antilles
    </Tag>
    <Tag
      callbackId="2.11"
      isRemovable={true}
      key=".1:$2.11"
      onRemove={[Function]}
    >
      Raymus Antilles
    </Tag>
    <Tag
      callbackId="2.12"
      isRemovable={true}
      key=".1:$2.12"
      onRemove={[Function]}
    >
      Wedge Antilles
    </Tag>
    <Tag
      callbackId="2.13"
      isRemovable={true}
      key=".1:$2.13"
      onRemove={[Function]}
    >
      Queen Apailana
    </Tag>
    <Tag
      callbackId="2.14"
      isRemovable={true}
      key=".1:$2.14"
      onRemove={[Function]}
    >
      Commander Appo
    </Tag>
    <Tag
      callbackId="2.15"
      isRemovable={true}
      key=".1:$2.15"
      onRemove={[Function]}
    >
      Passel Argente
    </Tag>
    <Tag
      callbackId="2.16"
      isRemovable={true}
      key=".1:$2.16"
      onRemove={[Function]}
    >
      Faro Argyus
    </Tag>
    <Tag
      callbackId="2.17"
      isRemovable={true}
      key=".1:$2.17"
      onRemove={[Function]}
    >
      Seti Ashgad
    </Tag>
    <Tag
      callbackId="2.18"
      isRemovable={true}
      key=".1:$2.18"
      onRemove={[Function]}
    >
      AZI-3
    </Tag>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 6`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ask Aak
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 7`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Admiral Gial Ackbar
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 8`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Acros-Krik
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 9`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ak-Rev
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 10`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Stass Allie
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 11`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Almec
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 12`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Mas Amedda
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 13`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Amee
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 14`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Padmé Amidala
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 15`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Cassian Andor
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 16`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Bail Antilles
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 17`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Raymus Antilles
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 18`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Wedge Antilles
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 19`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Queen Apailana
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 20`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Commander Appo
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 21`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Passel Argente
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 22`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Faro Argyus
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 23`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Seti Ashgad
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 24`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      AZI-3
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 25`] = `
<div
  className="lucid-Tag lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Lord of the Rings
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
    <Tag
      callbackId="3.0"
      isRemovable={true}
      key=".1:$3.0"
      onRemove={[Function]}
    >
      Adrahil
    </Tag>
    <Tag
      callbackId="3.1"
      isRemovable={true}
      key=".1:$3.1"
      onRemove={[Function]}
    >
      Adrahil II
    </Tag>
    <Tag
      callbackId="3.2"
      isRemovable={true}
      key=".1:$3.2"
      onRemove={[Function]}
    >
      Aegnor
    </Tag>
    <Tag
      callbackId="3.3"
      isRemovable={true}
      key=".1:$3.3"
      onRemove={[Function]}
    >
      Aerandir
    </Tag>
    <Tag
      callbackId="3.4"
      isRemovable={true}
      key=".1:$3.4"
      onRemove={[Function]}
    >
      Aghan
    </Tag>
    <Tag
      callbackId="3.5"
      isRemovable={true}
      key=".1:$3.5"
      onRemove={[Function]}
    >
      Aglahad
    </Tag>
    <Tag
      callbackId="3.6"
      isRemovable={true}
      key=".1:$3.6"
      onRemove={[Function]}
    >
      Ailinel
    </Tag>
    <Tag
      callbackId="3.7"
      isRemovable={true}
      key=".1:$3.7"
      onRemove={[Function]}
    >
      Alatar
    </Tag>
    <Tag
      callbackId="3.8"
      isRemovable={true}
      key=".1:$3.8"
      onRemove={[Function]}
    >
      Aldamir
    </Tag>
    <Tag
      callbackId="3.9"
      isRemovable={true}
      key=".1:$3.9"
      onRemove={[Function]}
    >
      Aldor
    </Tag>
    <Tag
      callbackId="3.10"
      isRemovable={true}
      key=".1:$3.10"
      onRemove={[Function]}
    >
      Almarian
    </Tag>
    <Tag
      callbackId="3.11"
      isRemovable={true}
      key=".1:$3.11"
      onRemove={[Function]}
    >
      Almiel
    </Tag>
    <Tag
      callbackId="3.12"
      isRemovable={true}
      key=".1:$3.12"
      onRemove={[Function]}
    >
      Amandil
    </Tag>
    <Tag
      callbackId="3.13"
      isRemovable={true}
      key=".1:$3.13"
      onRemove={[Function]}
    >
      Amdír
    </Tag>
    <Tag
      callbackId="3.14"
      isRemovable={true}
      key=".1:$3.14"
      onRemove={[Function]}
    >
      Amlaith
    </Tag>
    <Tag
      callbackId="3.15"
      isRemovable={true}
      key=".1:$3.15"
      onRemove={[Function]}
    >
      Amrod
    </Tag>
    <Tag
      callbackId="3.16"
      isRemovable={true}
      key=".1:$3.16"
      onRemove={[Function]}
    >
      Amroth
    </Tag>
    <Tag
      callbackId="3.17"
      isRemovable={true}
      key=".1:$3.17"
      onRemove={[Function]}
    >
      Anardil
    </Tag>
    <Tag
      callbackId="3.18"
      isRemovable={true}
      key=".1:$3.18"
      onRemove={[Function]}
    >
      Anborn
    </Tag>
    <Tag
      callbackId="3.19"
      isRemovable={true}
      key=".1:$3.19"
      onRemove={[Function]}
    >
      Ancalagon The Black
    </Tag>
    <Tag
      callbackId="3.20"
      isRemovable={true}
      key=".1:$3.20"
      onRemove={[Function]}
    >
      Andróg
    </Tag>
    <Tag
      callbackId="3.21"
      isRemovable={true}
      key=".1:$3.21"
      onRemove={[Function]}
    >
      Angbor
    </Tag>
    <Tag
      callbackId="3.22"
      isRemovable={true}
      key=".1:$3.22"
      onRemove={[Function]}
    >
      Angelimar
    </Tag>
    <Tag
      callbackId="3.23"
      isRemovable={true}
      key=".1:$3.23"
      onRemove={[Function]}
    >
      Angelimir
    </Tag>
    <Tag
      callbackId="3.24"
      isRemovable={true}
      key=".1:$3.24"
      onRemove={[Function]}
    >
      Angrod
    </Tag>
    <Tag
      callbackId="3.25"
      isRemovable={true}
      key=".1:$3.25"
      onRemove={[Function]}
    >
      Anárion
    </Tag>
    <Tag
      callbackId="3.26"
      isRemovable={true}
      key=".1:$3.26"
      onRemove={[Function]}
    >
      Ar-Adûnakhôr
    </Tag>
    <Tag
      callbackId="3.27"
      isRemovable={true}
      key=".1:$3.27"
      onRemove={[Function]}
    >
      Ar-Gimilzôr
    </Tag>
    <Tag
      callbackId="3.28"
      isRemovable={true}
      key=".1:$3.28"
      onRemove={[Function]}
    >
      Ar-Pharazôn
    </Tag>
    <Tag
      callbackId="3.29"
      isRemovable={true}
      key=".1:$3.29"
      onRemove={[Function]}
    >
      Ar-Sakalthôr
    </Tag>
    <Tag
      callbackId="3.30"
      isRemovable={true}
      key=".1:$3.30"
      onRemove={[Function]}
    >
      Ar-Zimrathôn
    </Tag>
    <Tag
      callbackId="3.31"
      isRemovable={true}
      key=".1:$3.31"
      onRemove={[Function]}
    >
      Arador
    </Tag>
    <Tag
      callbackId="3.32"
      isRemovable={true}
      key=".1:$3.32"
      onRemove={[Function]}
    >
      Araglas
    </Tag>
    <Tag
      callbackId="3.33"
      isRemovable={true}
      key=".1:$3.33"
      onRemove={[Function]}
    >
      Aragorn I
    </Tag>
    <Tag
      callbackId="3.34"
      isRemovable={true}
      key=".1:$3.34"
      onRemove={[Function]}
    >
      Aragorn II Elessar
    </Tag>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 26`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Adrahil
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 27`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Adrahil II
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 28`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aegnor
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 29`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aerandir
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 30`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aghan
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 31`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aglahad
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 32`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ailinel
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 33`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Alatar
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 34`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aldamir
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 35`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aldor
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 36`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Almarian
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 37`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Almiel
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 38`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Amandil
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 39`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Amdír
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 40`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Amlaith
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 41`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Amrod
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 42`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Amroth
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 43`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Anardil
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 44`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Anborn
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 45`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ancalagon The Black
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 46`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Andróg
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 47`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Angbor
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 48`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Angelimar
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 49`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Angelimir
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 50`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Angrod
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 51`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Anárion
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 52`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ar-Adûnakhôr
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 53`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ar-Gimilzôr
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 54`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ar-Pharazôn
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 55`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ar-Sakalthôr
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 56`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ar-Zimrathôn
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 57`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Arador
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 58`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Araglas
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 59`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aragorn I
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 60`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Aragorn II Elessar
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 61`] = `
<div
  className="lucid-Tag lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Star Trek
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
    <Tag
      callbackId="4.0"
      isRemovable={true}
      key=".1:$4.0"
      onRemove={[Function]}
    >
      Jonathan Archer
    </Tag>
    <Tag
      callbackId="4.1"
      isRemovable={true}
      key=".1:$4.1"
      onRemove={[Function]}
    >
      Ayala
    </Tag>
    <Tag
      callbackId="4.2"
      isRemovable={true}
      key=".1:$4.2"
      onRemove={[Function]}
    >
      Azan
    </Tag>
    <Tag
      callbackId="4.3"
      isRemovable={true}
      key=".1:$4.3"
      onRemove={[Function]}
    >
      Reginald Barclay
    </Tag>
    <Tag
      callbackId="4.4"
      isRemovable={true}
      key=".1:$4.4"
      onRemove={[Function]}
    >
      Lieutenant, JG (TNG,FCT)
    </Tag>
    <Tag
      callbackId="4.5"
      isRemovable={true}
      key=".1:$4.5"
      onRemove={[Function]}
    >
      Engineering Officer (TNG,Movies)
    </Tag>
    <Tag
      callbackId="4.6"
      isRemovable={true}
      key=".1:$4.6"
      onRemove={[Function]}
    >
      Bareil Antos
    </Tag>
    <Tag
      callbackId="4.7"
      isRemovable={true}
      key=".1:$4.7"
      onRemove={[Function]}
    >
      Julian Bashir
    </Tag>
    <Tag
      callbackId="4.8"
      isRemovable={true}
      key=".1:$4.8"
      onRemove={[Function]}
    >
      Season 6 (TNG)
    </Tag>
    <Tag
      callbackId="4.9"
      isRemovable={true}
      key=".1:$4.9"
      onRemove={[Function]}
    >
      Lieutenant, JG (S1-3)
    </Tag>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 62`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Jonathan Archer
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 63`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Ayala
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 64`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Azan
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 65`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Reginald Barclay
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 66`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Lieutenant, JG (TNG,FCT)
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 67`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Engineering Officer (TNG,Movies)
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 68`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Bareil Antos
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 69`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Julian Bashir
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 70`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Season 6 (TNG)
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;

exports[`Tag [common] example testing should match snapshot(s) for 03.interactive 71`] = `
<div
  className="lucid-Tag lucid-Tag-leaf lucid-Tag-is-removable"
>
  <div
    className="lucid-Tag-inner"
  >
    <span
      className="lucid-Tag-inner-children"
    >
      Lieutenant, JG (S1-3)
    </span>
    <span
      className="lucid-Tag-remove"
      onClick={[Function]}
    >
      <CrossIcon
        className="lucid-Tag-remove-button"
        isClickable={true}
        size={10}
        viewBox="4 4 8 8"
      />
    </span>
  </div>
</div>
`;
